SowaSearch is now able to search for subdirectories successfully